@@ -32,9 +32,9 @@ import org.netbeans.modules.xml.schema.model.Whitespace;
  */
 public abstract class NumberBase extends Datatype {
     
-    public final static Number UNBOUNDED_VALUE = Double.MAX_VALUE;
+    public static final Number UNBOUNDED_VALUE = Double.MAX_VALUE;
     
-    public final static String UNBOUNDED_STRING = "unbounded"; //NoI18n
+    public static final String UNBOUNDED_STRING = "unbounded"; //NoI18n
     
     static List<Facet> applicableFacets;
     
@@ -230,7 +230,7 @@ public abstract class NumberBase extends Datatype {
             this.totalDigits = new ArrayList<Integer>(1);
             hasFacets = true;
         }
-        this.totalDigits.add(new Integer(totalDigits));
+        this.totalDigits.add(Integer.valueOf(totalDigits));
     }
     
     /*
@@ -243,7 +243,7 @@ public abstract class NumberBase extends Datatype {
             this.fractionDigits = new ArrayList<Integer>(1);
             hasFacets = true;
         }
-        this.fractionDigits.add(new Integer(fractionDigits));
+        this.fractionDigits.add(Integer.valueOf(fractionDigits));
     }
     
     /*
