@@ -86,7 +86,7 @@ public abstract class DefaultSchemaGenerator extends SchemaGenerator {
     
     private int fgeCount;
     
-    public final static int commitRange = Integer.getInteger("schematools.axi.adp", 0);
+    public static final int commitRange = Integer.getInteger("schematools.axi.adp", 0);
     
     /**
      * Creates a new instance of DefaultSchemaGenerator
@@ -561,7 +561,7 @@ public abstract class DefaultSchemaGenerator extends SchemaGenerator {
         scs.add(element);
         scs.add(e);
         scs.add(eref);
-        fixNamesMap.put(new Integer(fgeCount++), scs);
+        fixNamesMap.put(Integer.valueOf(fgeCount++), scs);
     }
     
     protected void fixGlobalElementNames() {
